# Generated by Django 5.1 on 2024-08-18 16:57

import django.core.validators
import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = []

    operations = [
        migrations.CreateModel(
            name="Movie",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("title", models.CharField(max_length=128)),
                (
                    "release_year",
                    models.IntegerField(
                        validators=[
                            django.core.validators.MinValueValidator(limit_value=1874),
                            django.core.validators.MaxValueValidator(limit_value=3000),
                        ]
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="Studio",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("name", models.CharField(max_length=64)),
            ],
        ),
        migrations.CreateModel(
            name="Actor",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("first_name", models.CharField(max_length=64)),
                ("last_name", models.CharField(max_length=64)),
                ("movies", models.ManyToManyField(to="movies.movie")),
            ],
        ),
        migrations.CreateModel(
            name="MovieFinance",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "budget",
                    models.DecimalField(
                        decimal_places=2,
                        max_digits=13,
                        validators=[
                            django.core.validators.MinValueValidator(limit_value=0)
                        ],
                    ),
                ),
                (
                    "box_office",
                    models.DecimalField(
                        decimal_places=2,
                        max_digits=13,
                        validators=[
                            django.core.validators.MinValueValidator(limit_value=0)
                        ],
                    ),
                ),
                (
                    "movie",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="finance",
                        to="movies.movie",
                    ),
                ),
            ],
        ),
        migrations.AddField(
            model_name="movie",
            name="studio",
            field=models.ForeignKey(
                on_delete=django.db.models.deletion.CASCADE, to="movies.studio"
            ),
        ),
    ]
